// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preciseFormatterPrettier resolveConfig() brand-new-json-file 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/brand-new-json-file/initial.json",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() brand-new-jsx-file 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/brand-new-jsx-file/initial.jsx",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() changed-line-in-closure 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/changed-line-in-closure/initial.ts",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() empty-javascript-file 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/empty-javascript-file/initial.js",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() formatting-would-affect-total-line-count 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/formatting-would-affect-total-line-count/initial.js",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() hunk-marker-in-code 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/hunk-marker-in-code/initial.ts",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() multiple-updated-lines-javascript-file 1`] = `
{
  "endOfLine": "auto",
  "filepath": "./test/fixtures/multiple-updated-lines-javascript-file/initial.js",
  "semi": true,
  "singleQuote": false,
  "trailingComma": "none",
}
`;

exports[`preciseFormatterPrettier resolveConfig() single-updated-line-typescript 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/single-updated-line-typescript/initial.ts",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;

exports[`preciseFormatterPrettier resolveConfig() updated-class-body 1`] = `
{
  "arrowParens": "avoid",
  "bracketSameLine": false,
  "bracketSpacing": false,
  "endOfLine": "auto",
  "filepath": "./test/fixtures/updated-class-body/initial.js",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxSingleQuote": false,
  "printWidth": 100,
  "proseWrap": "always",
  "quoteProps": "consistent",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 4,
  "trailingComma": "none",
  "useTabs": false,
  "vueIndentScriptAndStyle": true,
}
`;
